# codex

./: Cargo.toml  README.md
.github/workflows/: CI.yml
cmp/percent/: Cargo.toml  README.md
cmp/percent/benches/: bencher.rs
cmp/percent/src/: lib.rs
codex-percent/: Cargo.toml  README.md
codex-percent/benches/: bencher.rs
codex-percent/examples/: decode_fixed.rs  decode_vec.rs  encode_fixed.rs  encode_vec.rs
codex-percent/src/: decode.rs  encode.rs  error.rs  lib.rs  types.rs
codex-percent/src/decode/: fixed.rs  vec.rs
codex-percent/src/encode/: fixed.rs  vec.rs
