[package]
name = "codex-percent-cmp"
version = "0.1.0-absolut0"
edition = "2021"
description = "Percent Encoding for the 1%"
homepage = "https://github.com/yaws-rs/codex"
keywords = ["http", "uri", "encoder", "decoder"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/yaws-rs/codex"
categories = ["no-std", "science"]

[features]
default = []
alloc = []
fixed = []
std = []

[dependencies]
codex-percent = { path = "../../codex-percent" }
percent-encoding = { version = "2.3" }

[dev-dependencies]
criterion = { version = "0.5" }

[[bench]]
name = "bencher"
harness = false
